--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>3.6</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.8</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.github.stephenc.java-iso-tools</groupId>
 			<artifactId>iso9660-vfs-impl</artifactId>
 			<version>2.0.1</version>
