--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter</artifactId>
+		    <version>2.1.2.RELEASE</version>
+		</dependency>
+
+	
+		<dependency>
 			<groupId>commons-net</groupId>
 			<artifactId>commons-net</artifactId>
 			<version>3.6</version>
@@ -58,5 +65,7 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
 		</dependency>
+		
+		
 	</dependencies>
 </project>
