--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,11 @@
 		    <artifactId>spring-boot-starter</artifactId>
 		    <version>2.1.2.RELEASE</version>
 		</dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.2.RELEASE</version>
+        </dependency>
 	
 		<dependency>
 			<groupId>commons-net</groupId>
